--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,11 @@ captures/
 # Keystore files
 *.jks
 *.keystore
+keystore.properties
+keystore_debug.properties
 
 # Google Services (e.g. APIs or Firebase)
-# google-services.json
+google-services.json
 
 # Android Patch
 gen-external-apklibs
@@ -89,6 +91,7 @@ obj/
 .idea/gradle.xml
 .idea/jarRepositories.xml
 .idea/navEditor.xml
+.idea/deploymentTargetDropDown.xml
 
 # Legacy Eclipse project files
 .classpath
