[#13] 뱃지가 달린 Round Image View 추가 - 리뷰를 반영한 전체적인 코드 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ android {
 }
 
 dependencies {
+    def glide_version = '4.13.1'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -77,4 +78,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.2.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 }
