--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 buildscript {
+    ext.hilt_version = '2.40.2'
+
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
