[#17] 통신을 위한 네트워크 관련 베이스 코드 작성 - 리뷰 반영 - 레트로핏 버전 변수 정의 - Failure 시 Throwable로 다루도록 변경 - request url 기록 - Exception 구조화

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ android {
 
 dependencies {
     def glide_version = '4.13.1'
+    def retrofit_version = '2.9.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -91,8 +92,8 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     // Retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     // Coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
