--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MoyeoRunandroid">
         <activity
-            android:name=".login.LoginActivity"
+            android:name=".profile.ProfileEditActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".login.ui.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
