--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ android {
 
 dependencies {
     def glide_version = '4.13.1'
+    def datastore_preferences_version = '1.0.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -88,4 +89,8 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:$datastore_preferences_version"
+    implementation "androidx.datastore:datastore-core:$datastore_preferences_version"
 }
