--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        def localProperties = new Properties()
+        localProperties.load(rootProject.file('./local.properties').newDataInputStream())
+        buildConfigField("String", "BASE_URL", localProperties['baseUrl'])
     }
 
     signingConfigs {
