[#30] 로그인 기능 추가
- 패키지 정리
- 네이밍 수정
- Dispatcher hilt 로 주입

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MoyeoRunandroid">
         <activity
-            android:name=".profile.ProfileEditActivity"
+            android:name=".profile.ui.ProfileEditActivity"
             android:exported="false"/>
         <activity
             android:name=".login.ui.LoginActivity"
