--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ android {
 dependencies {
     def glide_version = '4.13.1'
     def retrofit_version = '2.9.0'
-    def navigation_version = "2.4.2"
+    def navigation_version = '2.4.2'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
